# workouts-flask

./: .gitignore  pyproject.toml
tests/: conftest.py  data.sql  test_auth.py  test_db.py  test_factory.py  test_workout.py
workouts/: __init__.py  auth.py  db.py  exercises.py  schema.sql  workout_exercises.py  workouts.py
workouts/static/: style.css
workouts/templates/: base.html
workouts/templates/auth/: login.html  register.html
workouts/templates/workouts/: create.html  create_update.html  detail.html  edit_notes.html  index.html  update.html
workouts/templates/workouts/partials/: add_exercise.html  edit_notes.html  notes.html  workout_exercises.html
